Initial dump of tools that I use

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,36 @@
 [submodule "server-setup/server-configs-nginx"]
 	path = server-setup/server-configs-nginx
 	url = https://github.com/h5bp/server-configs-nginx.git
+[submodule "user-interface/foundation"]
+	path = user-interface/foundation
+	url = http://github.com/zurb/foundation.git
+[submodule "reading/ruby-style-guide"]
+	path = reading/ruby-style-guide
+	url = https://github.com/bbatsov/ruby-style-guide.git
+[submodule "reading/javascript-style-guide"]
+	path = reading/javascript-style-guide
+	url = https://github.com/airbnb/javascript.git
+[submodule "user-interface/bootstrap"]
+	path = user-interface/bootstrap
+	url = https://github.com/twbs/bootstrap.git
+[submodule "boilerplates/html5"]
+	path = boilerplates/html5
+	url = https://github.com/h5bp/html5-boilerplate.git
+[submodule "plugins/devise"]
+	path = plugins/devise
+	url = https://github.com/plataformatec/devise.git
+[submodule "plugins/bundler"]
+	path = plugins/bundler
+	url = https://github.com/bundler/bundler.git
+[submodule "user-interface/ink"]
+	path = user-interface/ink
+	url = http://github.com/zurb/ink.git
+[submodule "plugins/jbuilder"]
+	path = plugins/jbuilder
+	url = https://github.com/rails/jbuilder.git
+[submodule "user-interface/font-awesome"]
+	path = user-interface/font-awesome
+	url = https://github.com/FortAwesome/Font-Awesome.git
+[submodule "reading/git-book"]
+	path = reading/git-book
+	url = https://github.com/progit/progit.git
